force-app/main/default/objects/House__c/fields/AtencaoAnuncio__c.field-meta.xml
<CustomField>
    <fullName>AtencaoAnuncio__c</fullName>
    <formula>(ISBLANK(Address__c) ||
ISBLANK(Bathrooms__c) ||
ISBLANK(Bedroom__c) ||
ISBLANK(Price__c) ||
ISBLANK(Picture__c)) &amp;&amp;
NOT(ISBLANK(Municipio__r.Name))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AtencaoAnuncio</label>
    <type>Checkbox</type>
</CustomField>