force-app/main/default/objects/House__c/fields/Cep__c.field-meta.xml
<CustomField>
    <fullName>Cep__c</fullName>
    <label>Cep</label>
    <type>TextArea</type>
</CustomField>