force-app/main/default/objects/House__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Houses</relationshipLabel>
    <relationshipName>Houses</relationshipName>
    <type>Lookup</type>
</CustomField>