force-app/main/default/objects/House__c/fields/SellDate__c.field-meta.xml
<CustomField>
    <fullName>SellDate__c</fullName>
    <label>SellDate</label>
    <type>DateTime</type>
</CustomField>