force-app/main/default/objects/House__c/fields/Selled__c.field-meta.xml
<CustomField>
    <fullName>Selled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Selled</label>
    <type>Checkbox</type>
</CustomField>