force-app/main/default/objects/House__c/fields/SellValue__c.field-meta.xml
<CustomField>
    <fullName>SellValue__c</fullName>
    <label>Sell Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>