force-app/main/default/objects/House__c/listViews/Casas_do_Municipio_de_Goias.listView-meta.xml
<ListView>
    <fullName>Casas_do_Municipio_de_Goias</fullName>
    <columns>NAME</columns>
    <columns>Price__c</columns>
    <columns>Address__c</columns>
    <columns>Zip__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Municipio__c</field>
        <operation>equals</operation>
        <value>Goiás</value>
    </filters>
    <label>Casas do Municipio de Goiás</label>
</ListView>